# cs3210-rustos-public

./: .gitignore  README.md
boot/src/: main.rs
docs/: final-thoughts.md  sdcard-issues.md  usb-issues.md
kern/: Makefile  qemu.sh
kern/sd/: Makefile  delays.c  sd.c
kern/src/: allocator.rs  console.rs  fs.rs  init.rs  main.rs  mutex.rs  net.rs  param.rs  shell.rs  traps.rs  vm.rs
kern/src/allocator/: bin.rs  bump.rs  util.rs
kern/src/fs/: sd.rs
kern/src/init/: panic.rs  vectors.s
kern/src/net/: uspi.rs
kern/src/process/: process.rs  scheduler.rs
kern/src/traps/: frame.rs  irq.rs  syndrome.rs  syscall.rs
kern/src/vm/: pagetable.rs
lib/fat32/: Cargo.toml
lib/fat32/src/: mbr.rs  tests.rs  util.rs
lib/fat32/src/traits/: fs.rs
lib/fat32/src/vfat/: cache.rs  cluster.rs  dir.rs  ebpb.rs  entry.rs  fat.rs  file.rs  metadata.rs  vfat.rs
lib/kernel_api/src/: lib.rs  syscall.rs
lib/pi/src/: gpio.rs  interrupt.rs  local_interrupt.rs  timer.rs  uart.rs
lib/pi/src/atags/: atag.rs  mod.rs  raw.rs
lib/stack-vec/src/: lib.rs
lib/ttywrite/: Cargo.toml
lib/ttywrite/src/: main.rs
lib/xmodem/src/: lib.rs
tut/0-rustlings/exercises/: test1.rs
tut/0-rustlings/exercises/conversions/: from_into.rs  from_str.rs  try_from_into.rs
tut/0-rustlings/exercises/cs140e/: borrow-2.rs  builder.rs  derive.rs  expressions.rs  feature-1.rs  trait-impl.rs  try.rs
tut/0-rustlings/exercises/enums/: enums1.rs  enums2.rs  enums3.rs
tut/0-rustlings/exercises/error_handling/: errors1.rs  errorsn.rs  option1.rs  (+1 more)
tut/1-blinky/phase3/: blinky.c
user/fib/src/: main.rs
(+3 files in other folders)
