[package]
name = "fat32"
version = "0.1.0"
authors = [
    "Sergio Benitez <sb@sergio.bz>",
    "Taesoo Kim <taesoo@gatech.edu>",
    "Yechan Bae <yechan@gatech.edu>",
    "Sujin Park <sujin.park@gatech.edu>",
    "Mansour Alharthi <mansourah@gatech.edu>"
]
edition = "2018"

[dependencies]
ahash = "=0.3.8"
core_io = "=0.1.20190701"
const-random = "=0.1.6"
const-random-macro = "=0.1.6"
shim = { path = "../shim", features = ["alloc"] }
hashbrown = "0.7.2"

[dev-dependencies]
rand = "0.4"

[features]
no_std = ["shim/no_std"]
