[package]
name = "fat32"
version = "0.1.0"
authors = [
    "Sergio Benitez <sb@sergio.bz>",
    "Taesoo Kim <taesoo@gatech.edu>",
    "Yechan Bae <yechan@gatech.edu>",
    "Sujin Park <sujin.park@gatech.edu>",
    "Mansour Alharthi <mansourah@gatech.edu>"
]
edition = "2018"

[dependencies]
shim = { path = "../shim", features = ["alloc"] }
core_io = "=0.1.20190701"
# ahash 2.18. Need to pull directly from github because this version
# was yanked. Idk why this works, but if it builds then it builds ;)
ahash = { git = "https://github.com/tkaitchuck/aHash", rev = "e3b03e888d277cde7f6178813e594d72b89e3ccb" }
const-random = "=0.1.6"
const-random-macro = "=0.1.6"
hashbrown = "0.7.2"

[dev-dependencies]
rand = "0.4"

[features]
no_std = ["shim/no_std"]
